...
                    <view key="view" contentMode="scaleToFill" id="da8-xn-qfM">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uIi-fz-JjF">
                                <rect key="frame" x="285" y="349" width="30" height="30"/>
                                <state key="normal" title="Go"/>
                                <connections>
                                    <segue destination="Ufz-D1-Jz8" kind="showDetail" id="0C6-1V-HmU"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="50m" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QLn-xa-RJA">
                                <rect key="frame" x="408" y="229" width="35" height="21"/>
...
                                        <textInputTraits key="textInputTraits"/>
                                        <connections>
                                            <outlet property="delegate" destination="Ufz-D1-Jz8" id="3bl-PY-CrD"/>
                                            <segue destination="XIw-Tw-hYM" kind="presentation" id="flY-5U-BJ3"/>
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Destination" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="fZR-Uc-uzF">
                                        <rect key="frame" x="20" y="68" width="560" height="30"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="klG-ga-sZ2"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                        <textInputTraits key="textInputTraits"/>
...
